# ficamp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  example.env  pyproject.toml  types.py
.github/workflows/: bump.yaml  release-python.yaml  test.yaml
parsers/: protocol.py
scripts/: format  lint
src/ficamp/: __main__.py  datastructures.py  types.py
src/ficamp/classifier/: features.py  google_apis.py  infer.py  keywords.py  preprocessing.py
src/ficamp/parsers/: abn.py  banc_sabadell.py  bbva.py  bsabadell.py  caixabank.py  protocol.py
tests/: test_google_api.py  test_parsers_abn.py  test_preprocessing.py
