[tool.poetry]
name = "ficamp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  { include = "ficamp", from = "src" }
]

[tool.poetry.dependencies]
openpyxl = "^3.1.2"
python = "^3.11"
requests-mock = "^1.12.1"
xlrd = "^2.0.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.4"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
